Refactor - clean up sonar issues